@@ -6,6 +6,7 @@ Phoronix Test Suite (Git)
 - pts-core: Add list-not-installed-tests command (alias: list-uninstalled-tests)
 - pts-core: Detection for qupzilla browser when no alternative exists
 - pts-core: Add "phoronix-test-suite php-conf" sub-command to dump more useful PHP information for debugging
+- phodevi: Support for reporting memory frequency when overclocked if reported via "Configured Clock Speed" in dmidecode for RAM
 
 Phoronix Test Suite 6.6.0-Loppa
 
